# PIM_Plataforma

./: .gitignore  CHANGELOG.md  PIM.py  pyproject.toml
docs/: README.md
scripts/: run.sh
src/pim/: __init__.py  cli.py  core.py  data.py  io.py
tests/: conftest.py  test_cli.py  test_core.py  test_io.py
